chore: Project cleanup and dependency management

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "npx tsx src/db/migrate.ts",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,42 +26,51 @@
   "type": "commonjs",
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@jest/globals": "^30.2.0",
+    "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.5",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "prisma": "^6.16.2",
     "rimraf": "^6.0.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.1"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@sinclair/typebox": "^0.34.41",
     "@solana/web3.js": "^1.98.4",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "bullmq": "^5.58.9",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "drizzle-orm": "^0.44.5",
     "env-schema": "^6.0.1",
     "express": "^5.1.0",
     "fastify": "^5.6.1",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.0",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "pino": "^9.11.0",
     "pino-pretty": "^13.1.1",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "puppeteer": "^24.22.3",
+    "zod": "^4.1.11"
   }
 }
