--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "target": "ES2023",
     "outDir": "dist",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
+    "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
       "#*": ["src/*"]
